
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>

    <string name="toppings">Toppings</string>
    <string name="quantity">Quantity</string>
    <string name="order_summary">Order Summary</string>
    <string name="thank_you">Thank You!</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="order">Order</string>
    <string name="add_whipped_cream">Add Whipped cream?</string>
    <string name="add_chocolate">Add Chocolate?</string>
    <string name="total">Total = $</string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Aaha">%s</xliff:g></string>
</resources>
