<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    tools:context="com.example.android.justjava.MainActivity">

    <EditText
        android:id="@+id/customer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/order_summary_name"
        android:inputType="textCapWords" />


    <TextView
        android:text="@string/toppings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:textAllCaps="true"
        />

    <CheckBox
        android:id="@+id/topping_whippedCream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whipped_cream"
        android:paddingLeft="24dp"
        android:textSize="16sp"
        android:textAppearance="?android:textAppearanceMedium" />

    <CheckBox
        android:id="@+id/topping_chocolate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chocolate"
        android:paddingLeft="24dp"
        android:textSize="16sp"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:text="@string/quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:textAllCaps="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/subtract_quantity"
            android:layout_height="48dp"
            android:layout_width="48dp"
            android:text="-"
            android:padding="8dp"
            android:onClick="decrementQ"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:text="0"
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#000000"
            android:padding="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

        <Button
            android:id="@+id/add_quantity"
            android:layout_height="48dp"
            android:layout_width="48dp"
            android:text="+"
            android:padding="8dp"
            android:onClick="incrementQ"/>

    </LinearLayout>



    <TextView
        android:text="@string/order_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="8dp"
        android:layout_marginBottom="8dp"
        android:textAllCaps="true"

        />

    <TextView
        android:text="$10"
        android:id="@+id/order_summary_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="8dp"
        android:textColor="#000000"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/button_id"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/order"
        android:onClick="submitOrder"/>


</LinearLayout>

</ScrollView>